--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body {
 .testimonial {
   padding: 1.2em;
   border-radius: 10px;
+  box-shadow: 0px 13px 24px -6px rgba(5, 0, 5, 0.58);
 }
 /*Section 1*/
 .section1 {
@@ -240,6 +241,7 @@ body {
   .testimonial {
     padding: 1.2em;
     margin-bottom: 15px;
+    box-shadow: -2px 6px 24px -10px rgba(5, 0, 5, 0.58);
   }
   .section1 .quote {
     right: 10px;
